{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 100,
  "lineage": "a4ecce79-f6de-690c-09f2-08d3e1449a2f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_k8s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb653ca2d3203ac1",
            "arn": "arn:aws:ec2:us-east-2:838347237198:instance/i-0b35a4344702172e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b35a4344702172e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-k8s-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0baa889c5feae02df",
            "private_dns": "ip-10-2-0-56.us-east-2.compute.internal",
            "private_ip": "10.2.0.56",
            "public_ip": "3.145.99.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ddf444e33860577e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8a6ecdd94844ad3",
            "tags": {
              "Name": "aws-k8s-master"
            },
            "tags_all": {
              "Name": "aws-k8s-master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07e6f2c0f6e4edc9f"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_k8s_key",
            "aws_security_group.aws_k8s_sg",
            "aws_subnet.aws_k8s_subnet",
            "aws_vpc.aws_k8s_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_k8s_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:838347237198:internet-gateway/igw-01bc49aa5687f035f",
            "id": "igw-01bc49aa5687f035f",
            "owner_id": "838347237198",
            "tags": {
              "Name": "aws-k8s-igw"
            },
            "tags_all": {
              "Name": "aws-k8s-igw"
            },
            "vpc_id": "vpc-0bcd8c77322718ec7"
          },
          "dependencies": [
            "aws_vpc.aws_k8s_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_k8s_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:838347237198:route-table/rtb-00c69c868d6dcbf10",
            "id": "rtb-00c69c868d6dcbf10",
            "owner_id": "838347237198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bc49aa5687f035f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-k8s-rt"
            },
            "tags_all": {
              "Name": "aws-k8s-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcd8c77322718ec7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws_k8s_igw",
            "aws_vpc.aws_k8s_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_k8s_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0444526be17903b93",
            "route_table_id": "rtb-00c69c868d6dcbf10",
            "subnet_id": "subnet-0a8a6ecdd94844ad3"
          },
          "dependencies": [
            "aws_internet_gateway.aws_k8s_igw",
            "aws_route_table.aws_k8s_rt",
            "aws_subnet.aws_k8s_subnet",
            "aws_vpc.aws_k8s_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_k8s_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:838347237198:security-group/sg-07e6f2c0f6e4edc9f",
            "description": "Allow All inbound TCP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e6f2c0f6e4edc9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All TCP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "aws-allowall-sg",
            "name_prefix": "",
            "owner_id": "838347237198",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bcd8c77322718ec7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_k8s_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_k8s_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:838347237198:subnet/subnet-0a8a6ecdd94844ad3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8a6ecdd94844ad3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "838347237198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-k8s-subnet"
            },
            "tags_all": {
              "Name": "aws-k8s-subnet"
            },
            "vpc_id": "vpc-0bcd8c77322718ec7"
          },
          "dependencies": [
            "aws_vpc.aws_k8s_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_k8s_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:838347237198:vpc/vpc-0bcd8c77322718ec7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-05a41a92386a39369",
            "default_route_table_id": "rtb-0c02c9298caf2dc95",
            "default_security_group_id": "sg-00a757056362f161a",
            "dhcp_options_id": "dopt-041732da7cac7bb1d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bcd8c77322718ec7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c02c9298caf2dc95",
            "owner_id": "838347237198",
            "tags": {
              "Name": "aws-k8s-network"
            },
            "tags_all": {
              "Name": "aws-k8s-network"
            }
          }
        }
      ]
    }
  ]
}